4.0.1: Remove more legacy emptySet() etc. methods